--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "sirv": "^3.0.1",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "wft-geodb-js-client": "^2.0.3"
   },
   "devDependencies": {
     "rimraf": "^6.0.1"
