--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tinyhttp/app": "^2.5.2",
     "@tinyhttp/logger": "^2.1.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.4.7",
     "liquidjs": "^10.21.0",
     "node-localstorage": "^3.0.5",
