--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api-2425",
+  "name": "tryout",
   "version": "1.0.0",
-  "description": "In dit vier weken durende vak zullen we de kracht van het web ervaren en kijken hoe we (mobiele) web apps kunnen maken die\nnet zo aantrekkelijk zijn als native mobiele apps.",
+  "description": "Portfolio Kim van Zuilen",
   "type": "module",
   "scripts": {
     "clean": "rimraf dist && mkdir dist",
